Fix UI issue in auth pages

--- a/accounts/templates/gentellela/reset_password.html
+++ b/accounts/templates/gentellela/reset_password.html
@@ -1,97 +1,68 @@
+
+{% extends 'gentellela/auth_base.html' %}
 {% load static i18n %}
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <!-- Meta, title, CSS, favicons, etc. -->
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+{% block content %}
+  <div class="animate form login_form">
+    <section class="login_content">
+      {% if validlink %}
+      <form method="POST">
+        {%csrf_token%}
+        <h1>{% trans 'رمز عبور جدید' %}</h1>
+        {% for hidden_field in form.hidden_fields %}
+        {{ hidden_field }}
+        {% endfor %}
 
-  <title>{{ site_name }}</title>
-
-
-  <!-- Bootstrap -->
-  <link href="{% static "vendors/bootstrap/dist/css/bootstrap.min.css" %}" rel="stylesheet">
-  <link href="{% static "vendors/bootstrap-rtl/dist/css/bootstrap-rtl.min.css" %}" rel="stylesheet">
-  <!-- Font Awesome -->
-  <link href="{% static "vendors/font-awesome/css/font-awesome.min.css" %}" rel="stylesheet">
-  <!-- NProgress -->
-  <link href="{% static "vendors/nprogress/nprogress.css" %}" rel="stylesheet">
-  <!-- Animate.css -->
-  <link href="{% static "vendors/animate.css/animate.min.css" %}" rel="stylesheet">
-  <!-- Custom Theme Style -->
-  <link href="{% static "build/css/custom.min.css" %}" rel="stylesheet">
-
-
-</head>
-
-<body class="auth">
-  <div class="wrapper">
-    <div class="animate form login_form">
-      <section class="login_content">
-        {% if validlink %}
-        <form method="POST">
-          {%csrf_token%}
-          <h1>{% trans 'رمز عبور جدید' %}</h1>
-          {% for hidden_field in form.hidden_fields %}
-          {{ hidden_field }}
+        {% if form.non_field_errors %}
+        <div class="alert alert-danger" role="alert">
+          {% for error in form.non_field_errors %}
+          {{ error }}
           {% endfor %}
+        </div>
+        {% endif %}
 
-          {% if form.non_field_errors %}
-          <div class="alert alert-danger" role="alert">
-            {% for error in form.non_field_errors %}
-            {{ error }}
-            {% endfor %}
+        {% for field in form.visible_fields %}
+        <div>
+          {% if form.is_bound %}
+          {{ field }}
+          {% if field.errors %}
+          <div class="alert alert-danger alert-dismissible fade in">
+            <ul>
+              {% for error in field.errors %}
+              <li>
+                {{ error }}
+              </li>
+              {% endfor %}
+            </ul>
           </div>
           {% endif %}
+          {% else %}
+          {{ field }}
+          {% endif %}
+          {% if field.help_text %}
+          <small class="form-text text-muted">{{ field.help_text }}</small>
+          {% endif %}
+        </div>
+        {% endfor %}
 
-          {% for field in form.visible_fields %}
-          <div>
-            {% if form.is_bound %}
-            {{ field }}
-            {% if field.errors %}
-            <div class="alert alert-danger alert-dismissible fade in">
-              <ul>
-                {% for error in field.errors %}
-                <li>
-                  {{ error }}
-                </li>
-                {% endfor %}
-              </ul>
-            </div>
-            {% endif %}
-            {% else %}
-            {{ field }}
-            {% endif %}
-            {% if field.help_text %}
-            <small class="form-text text-muted">{{ field.help_text }}</small>
-            {% endif %}
-          </div>
-          {% endfor %}
+        <div>
+          <input type="submit" class="btn btn-default submit" value="{% trans 'ارسال' %}" />
+        </div>
 
-          <div>
-            <input type="submit" class="btn btn-default submit" value="{% trans 'ارسال' %}" />
-          </div>
+        <div class="clearfix"></div>
 
-          <div class="clearfix"></div>
+        <div class="separator">
+          <a href="{% url 'account_login' %}" class="sub-link">{% trans 'ورود به سایت' %}</a>
+        </div>
 
-          <div class="separator">
-            <a href="{% url 'account_login' %}" class="sub-link">{% trans 'ورود به سایت' %}</a>
-          </div>
+        <div class="login_footer">
+          {% include 'gentellela/page_footer.html' %}
+        </div>
 
-          <div class="login_footer">
-            {% include 'gentellela/page_footer.html' %}
-          </div>
-
-        </form>
-        {% else %}
-        <p>{% trans 'آدرس بازیابی رمز شما معتبر نمی‌باشد. لطفا مجدد تلاش کنید.' %}</p>
-        {% endif %}
-      </section>
-    </div>
+      </form>
+      {% else %}
+      <p>{% trans 'آدرس بازیابی رمز شما معتبر نمی‌باشد. لطفا مجدد تلاش کنید.' %}</p>
+      {% endif %}
+    </section>
   </div>
-</body>
-
-</html>
+{% endblock content %}
