--- a/accounts/templates/gentellela/reset_password_done.html
+++ b/accounts/templates/gentellela/reset_password_done.html
@@ -1,50 +1,18 @@
+{% extends 'gentellela/auth_base.html' %}
 {% load static i18n %}
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <!-- Meta, title, CSS, favicons, etc. -->
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+{% block content %}
+  <div class="animate form login_form">
+    <section class="login_content">
+      <div style="position: relative; margin:20px 0px;">
 
-  <title>{{ site_name }}</title>
-
-
-  <!-- Bootstrap -->
-  <link href="{% static "vendors/bootstrap/dist/css/bootstrap.min.css" %}" rel="stylesheet">
-  <link href="{% static "vendors/bootstrap-rtl/dist/css/bootstrap-rtl.min.css" %}" rel="stylesheet">
-  <!-- Font Awesome -->
-  <link href="{% static "vendors/font-awesome/css/font-awesome.min.css" %}" rel="stylesheet">
-  <!-- NProgress -->
-  <link href="{% static "vendors/nprogress/nprogress.css" %}" rel="stylesheet">
-  <!-- Animate.css -->
-  <link href="{% static "vendors/animate.css/animate.min.css" %}" rel="stylesheet">
-  <!-- Custom Theme Style -->
-  <link href="{% static "build/css/custom.min.css" %}" rel="stylesheet">
-
-
-</head>
-
-<body class="auth">
-  <div>
-    <div class="wrapper">
-      <div class="animate form login_form">
-        <section class="login_content">
-          <div style="position: relative; margin:20px 0px;">
-
-            <h1>{% trans 'توجه!' %}</h1>
-            <p>{% trans 'رمز عبور شما با موفقیت تغییر کرد' %}</p>
-            <a class="sub-link" href="{% url 'account_login' %}">{% trans 'برای ورود به حساب کاربری روی این لینک کلیک کنید.' %}</a>
-            <div class="login_footer">
-              {% include 'gentellela/page_footer.html' %}
-            </div>
-          </div>
-        </section>
+        <h1>{% trans 'توجه!' %}</h1>
+        <p>{% trans 'رمز عبور شما با موفقیت تغییر کرد' %}</p>
+        <a class="sub-link" href="{% url 'account_login' %}">{% trans 'برای ورود به حساب کاربری روی این لینک کلیک کنید.' %}</a>
+        <div class="login_footer">
+          {% include 'gentellela/page_footer.html' %}
+        </div>
       </div>
-    </div>
+    </section>
   </div>
-</body>
-
-</html>
+{% endblock content %}
