--- a/accounts/templates/gentellela/forgot_password.html
+++ b/accounts/templates/gentellela/forgot_password.html
@@ -1,34 +1,7 @@
+{% extends 'gentellela/auth_base.html' %}
 {% load static i18n %}
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <!-- Meta, title, CSS, favicons, etc. -->
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <title>{{ site_name }}</title>
-
-
-  <!-- Bootstrap -->
-  <link href="{% static "vendors/bootstrap/dist/css/bootstrap.min.css" %}" rel="stylesheet">
-  <link href="{% static "vendors/bootstrap-rtl/dist/css/bootstrap-rtl.min.css" %}" rel="stylesheet">
-  <!-- Font Awesome -->
-  <link href="{% static "vendors/font-awesome/css/font-awesome.min.css" %}" rel="stylesheet">
-  <!-- NProgress -->
-  <link href="{% static "vendors/nprogress/nprogress.css" %}" rel="stylesheet">
-  <!-- Animate.css -->
-  <link href="{% static "vendors/animate.css/animate.min.css" %}" rel="stylesheet">
-  <!-- Custom Theme Style -->
-  <link href="{% static "build/css/custom.min.css" %}" rel="stylesheet">
-
-
-</head>
-
-<body class="auth">
-  <div class="wrapper">
+{% block content %}
     <div class="animate form login_form">
       <section class="login_content">
         <form method="POST" action="{% url 'account_forgot_password' %}">
@@ -87,7 +60,5 @@
         </form>
       </section>
     </div>
-  </div>
-  < </body>
 
-</html>
+{% endblock content %}
