Temporary disable auto setting signal type to fix later

--- a/cfd/templates/gentelella/signal_form.html
+++ b/cfd/templates/gentelella/signal_form.html
@@ -428,6 +428,7 @@
 
     function setSignalType()
     {
+        return false; // TODO: should fix later
         let entryField = document.getElementById("id_entry_point1");
         let profitField = document.getElementById("id_take_profit1");
         let entry = parseInt(entryField.value);
