--- a/cfd/templates/gentelella/signal_form.html
+++ b/cfd/templates/gentelella/signal_form.html
@@ -344,7 +344,29 @@
                     {% endif %}
                 </div>
             </div>
-
+            
+            <!-- Signal Type -->
+            <div class="form-group">
+                <label class="control-label col-md-2" for="{{form.signal_type.id_for_label}}">
+                    {{form.signal_type.label}}
+                    {% if form.signal_type.field.required %}<span class="required"> *</span>{% endif %}
+                </label>
+                <div class="col-md-9 col-sm-10 col-xs-12">
+                    {{form.signal_type}}
+                    {% if form.signal_type.help_text %}
+                        <small class="form-text text-muted">{{ form.signal_type.help_text }}</small>
+                    {% endif %}
+                    {% if form.is_bound %}
+                        {% if form.signal_type.errors %}
+                            {% for error in form.signal_type.errors %}
+                                <div class="invalid-feedback">
+                                    {{ error }}
+                                </div>
+                            {% endfor %}
+                        {% endif %}
+                    {% endif %}
+                </div>
+            </div>
 
             <!-- 8 Self entrance -->
             <div class="form-group">
