Fix issue in signals month

--- a/cfd/templates/gentelella/signals.html
+++ b/cfd/templates/gentelella/signals.html
@@ -45,10 +45,10 @@
                     </a>
                     {% endif %}
                     <form method="GET" id="analysis_form" style="display: inline">
-                        <select id="analysis_types" style="display: inline; width: 120px;" name="analysis_type">
-                            <option value="live" {% if request.GET.analysis_type == 'live' %}selected{%endif%}>Live</option>
-                            <option value="demo" {% if request.GET.analysis_type == 'demo' %}selected{%endif%}>Demo</option>
-                            <option value="btst" {% if request.GET.analysis_type == 'btst' %}selected{%endif%}>Back Test</option>
+                        <select id="signal_types" style="display: inline; width: 120px;" name="signal_type">
+                            <option value="live" {% if request.GET.signal_type == 'live' %}selected{%endif%}>Live</option>
+                            <option value="demo" {% if request.GET.signal_type == 'demo' %}selected{%endif%}>Demo</option>
+                            <option value="btst" {% if request.GET.signal_type == 'btst' %}selected{%endif%}>Back Test</option>
                         </select>
                     </form>
                 </div>
@@ -190,7 +190,7 @@
                 $('#month_form').submit();
             });
         });
-        $("#analysis_types").change(function(){
+        $("#signal_types").change(function(){
             $("#analysis_form").submit();
         });
     </script>
