--- a/cfd/templates/gentelella/signal_form.html
+++ b/cfd/templates/gentelella/signal_form.html
@@ -7,6 +7,7 @@
 {% block extra_head %}{{extra_head|safe}}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/moment/moment.min.js"></script>
     {{ form.media }}
     <style>
         .datetimepicker {
