--- a/cfd/templates/gentelella/signal_form.html
+++ b/cfd/templates/gentelella/signal_form.html
@@ -134,15 +134,15 @@
 
             <!-- 0 Asset -->
             <div class="form-group">
-                <label class="control-label col-md-2 col-sm-2 col-xs-12" for="{{form.visible_fields.0.id_for_label}}">{{form.visible_fields.0.label}}{% if form.visible_fields.0.field.required %}<span class="required"> *</span>{% endif %}</label>
+                <label class="control-label col-md-2 col-sm-2 col-xs-12" for="{{form.asset.id_for_label}}">{{form.asset.label}}{% if form.asset.field.required %}<span class="required"> *</span>{% endif %}</label>
                 <div class="col-md-4 col-sm-4 col-xs-6">
-                    {{ form.visible_fields.0 }}
-                    {% if form.visible_fields.0.help_text %}
-                    <small class="form-text text-muted">{{ form.visible_fields.0.help_text }}</small>
+                    {{ form.asset }}
+                    {% if form.asset.help_text %}
+                    <small class="form-text text-muted">{{ form.asset.help_text }}</small>
                     {% endif %}
                     {% if form.is_bound %}
-                    {% if form.visible_fields.0.errors %}
-                    {% for error in form.visible_fields.0.errors %}
+                    {% if form.asset.errors %}
+                    {% for error in form.asset.errors %}
                     <div class="invalid-feedback">
                         {{ error }}
                     </div>
@@ -151,13 +151,13 @@
                     {% endif %}
                 </div>
                 <div class="col-md-4 col-sm-4 col-xs-6">
-                    {{ form.visible_fields.1 }}
-                    {% if form.visible_fields.1.help_text %}
-                    <small class="form-text text-muted">{{ form.visible_fields.1.help_text }}</small>
+                    {{ form.entry_type }}
+                    {% if form.entry_type.help_text %}
+                    <small class="form-text text-muted">{{ form.entry_type.help_text }}</small>
                     {% endif %}
                     {% if form.is_bound %}
-                    {% if form.visible_fields.1.errors %}
-                    {% for error in form.visible_fields.1.errors %}
+                    {% if form.entry_type.errors %}
+                    {% for error in form.entry_type.errors %}
                     <div class="invalid-feedback">
                         {{ error }}
                     </div>
@@ -169,15 +169,15 @@
 
             <!-- 2 EP -->
             <div class="form-group">
-                <label class="control-label col-md-2 col-sm-2 col-xs-12" for="{{form.visible_fields.2.id_for_label}}">{% trans 'نقطه ورود' %} {% if form.visible_fields.2.field.required %}<span class="required"> *</span>{% endif %}</label>
+                <label class="control-label col-md-2 col-sm-2 col-xs-12" for="{{form.entry_point1.id_for_label}}">{% trans 'نقطه ورود' %} {% if form.entry_point1.field.required %}<span class="required"> *</span>{% endif %}</label>
                 <div class="col-md-4 col-sm-4 col-xs-12">
-                    {{ form.visible_fields.2 }}
-                    {% if form.visible_fields.2.help_text %}
-                    <small class="form-text text-muted">{{ form.visible_fields.2.help_text }}</small>
+                    {{ form.entry_point1 }}
+                    {% if form.entry_point1.help_text %}
+                    <small class="form-text text-muted">{{ form.entry_point1.help_text }}</small>
                     {% endif %}
                     {% if form.is_bound %}
-                    {% if form.visible_fields.2.errors %}
-                    {% for error in form.visible_fields.2.errors %}
+                    {% if form.entry_point1.errors %}
+                    {% for error in form.entry_point1.errors %}
                     <div class="invalid-feedback">
                         {{ error }}
                     </div>
@@ -186,13 +186,13 @@
                     {% endif %}
                 </div>
                 <div class="col-md-4 col-sm-4 col-xs-12">
-                    {{ form.visible_fields.3 }}
-                    {% if form.visible_fields.3.help_text %}
-                    <small class="form-text text-muted">{{ form.visible_fields.3.help_text }}</small>
+                    {{ form.entry_point2 }}
+                    {% if form.entry_point2.help_text %}
+                    <small class="form-text text-muted">{{ form.entry_point2.help_text }}</small>
                     {% endif %}
                     {% if form.is_bound %}
-                    {% if form.visible_fields.3.errors %}
-                    {% for error in form.visible_fields.3.errors %}
+                    {% if form.entry_point2.errors %}
+                    {% for error in form.entry_point2.errors %}
                     <div class="invalid-feedback">
                         {{ error }}
                     </div>
@@ -204,15 +204,15 @@
 
             <!-- 3 SL -->
             <div class="form-group">
-                <label class="control-label col-md-2 col-sm-2 col-xs-12" for="{{form.visible_fields.4.id_for_label}}">{{form.visible_fields.4.label}}{% if form.visible_fields.4.field.required %}<span class="required"> *</span>{% endif %}</label>
+                <label class="control-label col-md-2 col-sm-2 col-xs-12" for="{{form.stop_loss1.id_for_label}}">{{form.stop_loss1.label}}{% if form.stop_loss1.field.required %}<span class="required"> *</span>{% endif %}</label>
                 <div class="col-md-4 col-sm-4 col-xs-12">
-                    {{ form.visible_fields.4 }}
-                    {% if form.visible_fields.4.help_text %}
-                    <small class="form-text text-muted">{{ form.visible_fields.4.help_text }}</small>
+                    {{ form.stop_loss1 }}
+                    {% if form.stop_loss1.help_text %}
+                    <small class="form-text text-muted">{{ form.stop_loss1.help_text }}</small>
                     {% endif %}
                     {% if form.is_bound %}
-                    {% if form.visible_fields.4.errors %}
-                    {% for error in form.visible_fields.4.errors %}
+                    {% if form.stop_loss1.errors %}
+                    {% for error in form.stop_loss1.errors %}
                     <div class="invalid-feedback">
                         {{ error }}
                     </div>
@@ -221,13 +221,13 @@
                     {% endif %}
                 </div>
                 <div class="col-md-4 col-sm-4 col-xs-12">
-                    {{ form.visible_fields.5 }}
-                    {% if form.visible_fields.5.help_text %}
-                    <small class="form-text text-muted">{{ form.visible_fields.5.help_text }}</small>
+                    {{ form.stop_loss2 }}
+                    {% if form.stop_loss2.help_text %}
+                    <small class="form-text text-muted">{{ form.stop_loss2.help_text }}</small>
                     {% endif %}
                     {% if form.is_bound %}
-                    {% if form.visible_fields.5.errors %}
-                    {% for error in form.visible_fields.5.errors %}
+                    {% if form.stop_loss2.errors %}
+                    {% for error in form.stop_loss2.errors %}
                     <div class="invalid-feedback">
                         {{ error }}
                     </div>
@@ -239,15 +239,15 @@
 
             <!-- 4 TP -->
             <div class="form-group">
-                <label class="control-label col-md-2 col-sm-2 col-xs-12" for="{{form.visible_fields.6.id_for_label}}">{{form.visible_fields.6.label}}{% if form.visible_fields.6.field.required %}<span class="required"> *</span>{% endif %}</label>
+                <label class="control-label col-md-2 col-sm-2 col-xs-12" for="{{form.take_profit1.id_for_label}}">{{form.take_profit1.label}}{% if form.take_profit1.field.required %}<span class="required"> *</span>{% endif %}</label>
                 <div class="col-md-3 col-sm-3 col-xs-12">
-                    {{ form.visible_fields.6 }}
-                    {% if form.visible_fields.6.help_text %}
-                    <small class="form-text text-muted">{{ form.visible_fields.6.help_text }}</small>
+                    {{ form.take_profit1 }}
+                    {% if form.take_profit1.help_text %}
+                    <small class="form-text text-muted">{{ form.take_profit1.help_text }}</small>
                     {% endif %}
                     {% if form.is_bound %}
-                    {% if form.visible_fields.6.errors %}
-                    {% for error in form.visible_fields.6.errors %}
+                    {% if form.take_profit1.errors %}
+                    {% for error in form.take_profit1.errors %}
                     <div class="invalid-feedback">
                         {{ error }}
                     </div>
@@ -256,13 +256,13 @@
                     {% endif %}
                 </div>
                 <div class="col-md-3 col-sm-3 col-xs-12">
-                    {{ form.visible_fields.7 }}
-                    {% if form.visible_fields.7.help_text %}
-                    <small class="form-text text-muted">{{ form.visible_fields.7.help_text }}</small>
+                    {{ form.take_profit2 }}
+                    {% if form.take_profit2.help_text %}
+                    <small class="form-text text-muted">{{ form.take_profit2.help_text }}</small>
                     {% endif %}
                     {% if form.is_bound %}
-                    {% if form.visible_fields.7.errors %}
-                    {% for error in form.visible_fields.7.errors %}
+                    {% if form.take_profit2.errors %}
+                    {% for error in form.take_profit2.errors %}
                     <div class="invalid-feedback">
                         {{ error }}
                     </div>
@@ -271,13 +271,13 @@
                     {% endif %}
                 </div>
                 <div class="col-md-3 col-sm-3 col-xs-12">
-                    {{ form.visible_fields.8 }}
-                    {% if form.visible_fields.8.help_text %}
-                    <small class="form-text text-muted">{{ form.visible_fields.8.help_text }}</small>
+                    {{ form.take_profit3 }}
+                    {% if form.take_profit3.help_text %}
+                    <small class="form-text text-muted">{{ form.take_profit3.help_text }}</small>
                     {% endif %}
                     {% if form.is_bound %}
-                    {% if form.visible_fields.8.errors %}
-                    {% for error in form.visible_fields.8.errors %}
+                    {% if form.take_profit3.errors %}
+                    {% for error in form.take_profit3.errors %}
                     <div class="invalid-feedback">
                         {{ error }}
                     </div>
@@ -289,15 +289,15 @@
 
             <!-- 5 Risk_Reward -->
             <div class="form-group">
-                <label class="control-label col-md-2 col-sm-2 col-xs-12" for="{{form.visible_fields.9.id_for_label}}">{{form.visible_fields.9.label}}{% if form.visible_fields.9.field.required %}<span class="required"> *</span>{% endif %}</label>
+                <label class="control-label col-md-2 col-sm-2 col-xs-12" for="{{form.risk_reward.id_for_label}}">{{form.risk_reward.label}}{% if form.risk_reward.field.required %}<span class="required"> *</span>{% endif %}</label>
                 <div class="col-md-9 col-sm-10 col-xs-12">
-                    {{ form.visible_fields.9 }}
-                    {% if form.visible_fields.9.help_text %}
-                    <small class="form-text text-muted">{{ form.visible_fields.9.help_text }}</small>
+                    {{ form.risk_reward }}
+                    {% if form.risk_reward.help_text %}
+                    <small class="form-text text-muted">{{ form.risk_reward.help_text }}</small>
                     {% endif %}
                     {% if form.is_bound %}
-                    {% if form.visible_fields.9.errors %}
-                    {% for error in form.visible_fields.9.errors %}
+                    {% if form.risk_reward.errors %}
+                    {% for error in form.risk_reward.errors %}
                     <div class="invalid-feedback">
                         {{ error }}
                     </div>
@@ -306,47 +306,6 @@
                     {% endif %}
                 </div>
             </div>
-
-            <!-- 6 Classic Analysis -->
-            <div class="form-group">
-                <label class="control-label col-md-2 col-sm-2 col-xs-12" for="{{form.visible_fields.10.id_for_label}}">{{form.visible_fields.10.label}}{% if form.visible_fields.10.field.required %}<span class="required"> *</span>{% endif %}</label>
-                <div class="col-md-9 col-sm-10 col-xs-12">
-                    {{ form.visible_fields.10 }}
-                    {% if form.visible_fields.10.help_text %}
-                    <small class="form-text text-muted">{{ form.visible_fields.10.help_text }}</small>
-                    {% endif %}
-                    {% if form.is_bound %}
-                    {% if form.visible_fields.10.errors %}
-                    {% for error in form.visible_fields.10.errors %}
-                    <div class="invalid-feedback">
-                        {{ error }}
-                    </div>
-                    {% endfor %}
-                    {% endif %}
-                    {% endif %}
-                </div>
-            </div>
-
-            <!-- 7 PTA Analysis -->
-            <div class="form-group">
-                <label class="control-label col-md-2 col-sm-2 col-xs-12" for="{{form.visible_fields.11.id_for_label}}">{{form.visible_fields.11.label}}{% if form.visible_fields.11.field.required %}<span class="required"> *</span>{% endif %}</label>
-                <div class="col-md-9 col-sm-10 col-xs-12">
-                    {{ form.visible_fields.11 }}
-                    {% if form.visible_fields.11.help_text %}
-                    <small class="form-text text-muted">{{ form.visible_fields.11.help_text }}</small>
-                    {% endif %}
-                    {% if form.is_bound %}
-                    {% if form.visible_fields.11.errors %}
-                    {% for error in form.visible_fields.11.errors %}
-                    <div class="invalid-feedback">
-                        {{ error }}
-                    </div>
-                    {% endfor %}
-                    {% endif %}
-                    {% endif %}
-                </div>
-            </div>
-
 
             <!-- Analysis -->
             <div class="form-group">
@@ -360,15 +319,15 @@
                     <div id="analysisBox">
                         <div class="analysis-box">
                             <div class="row">
-                                <div class="col-md-2">
+                                <div class="col-md-2 col-sm-4 col-xs-4">
                                     <img id="analysisUserAvatar" src="" alt="" class="image">
                                 </div>
-                                <div class="col-md-4">
+                                <div class="col-md-4 col-sm-8 col-xs-8">
                                     <h4 id="analysisTitle"></h4>
                                     <div id="analysisUserName"></div>
                                     <p id="analysisDatetime"></p>
                                 </div>
-                                <div class="col-md-6">
+                                <div class="col-md-6 col-sm-12 col-xs-12">
                                     <img id="analysisImg" src="" alt="" class="image">
                                 </div>
                             </div>
@@ -443,15 +402,15 @@
 
             <!-- 8 Self entrance -->
             <div class="form-group">
-                <label class="control-label col-md-2 col-sm-2 col-xs-12" for="{{form.visible_fields.12.id_for_label}}">{{form.visible_fields.12.label}}{% if form.visible_fields.12.field.required %}<span class="required"> *</span>{% endif %}</label>
+                <label class="control-label col-md-2 col-sm-2 col-xs-12" for="{{form.self_entered.id_for_label}}">{{form.self_entered.label}}{% if form.self_entered.field.required %}<span class="required"> *</span>{% endif %}</label>
                 <div class="col-md-4 col-sm-4 col-xs-6">
-                    {{ form.visible_fields.12 }}
-                    {% if form.visible_fields.12.help_text %}
-                    <small class="form-text text-muted">{{ form.visible_fields.12.help_text }}</small>
+                    {{ form.self_entered }}
+                    {% if form.self_entered.help_text %}
+                    <small class="form-text text-muted">{{ form.self_entered.help_text }}</small>
                     {% endif %}
                     {% if form.is_bound %}
-                    {% if form.visible_fields.12.errors %}
-                    {% for error in form.visible_fields.12.errors %}
+                    {% if form.self_entered.errors %}
+                    {% for error in form.self_entered.errors %}
                     <div class="invalid-feedback">
                         {{ error }}
                     </div>
@@ -542,7 +501,15 @@
     profitField.onchange = () => {setSignalType()}
 
     function openAnalysisPopup(){
-        let popup = window.open("{% url 'cfd_profile_analysis_choose' team_id %}", "Analysis", "width=800,height=600");
+        let width = 800;
+        let height = 600;
+        let left = (screen.width/2)-(width/2);
+        let top = (screen.height/2)-(height/2);
+        let popup = window.open("{% url 'cfd_profile_analysis_choose' team_id %}",
+                                "Analysis",
+                                `toolbar=no, location=no, directories=no, status=no,
+                                menubar=no, scrollbars=no, resizable=no, copyhistory=no,
+                                width=${width}, height=${height}, top=${top}, left=${left}`);
         popup.focus();
 
     }
